; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_lgs8gl5.c_lgs8gl5_read_snr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_lgs8gl5.c_lgs8gl5_read_snr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.lgs8gl5_state* }
%struct.lgs8gl5_state = type { i32 }

@REG_STRENGTH = common dso_local global i32 0, align 4
@REG_STRENGTH_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, i32*)* @lgs8gl5_read_snr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lgs8gl5_read_snr(%struct.dvb_frontend* %0, i32* %1) #0 {
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.lgs8gl5_state*, align 8
  %6 = alloca i32, align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %8 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %7, i32 0, i32 0
  %9 = load %struct.lgs8gl5_state*, %struct.lgs8gl5_state** %8, align 8
  store %struct.lgs8gl5_state* %9, %struct.lgs8gl5_state** %5, align 8
  %10 = load %struct.lgs8gl5_state*, %struct.lgs8gl5_state** %5, align 8
  %11 = load i32, i32* @REG_STRENGTH, align 4
  %12 = call i32 @lgs8gl5_read_reg(%struct.lgs8gl5_state* %10, i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @REG_STRENGTH_MASK, align 4
  %15 = and i32 %13, %14
  %16 = shl i32 %15, 8
  %17 = load i32*, i32** %4, align 8
  store i32 %16, i32* %17, align 4
  ret i32 0
}

declare dso_local i32 @lgs8gl5_read_reg(%struct.lgs8gl5_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
